# nc-tg-bot

./: .dockerignore  README.md  main.py  pyproject.toml  shell.nix
bot/core/: loaders.py  runners.py
bot/dialogs/files/: __init__.py  getters.py  handlers.py  keyboards.py  states.py  windows.py
bot/dialogs/settings/: handlers.py
bot/locales/en/LC_MESSAGES/: default.ftl  files.ftl
bot/locales/ru/LC_MESSAGES/: default.ftl  files.ftl
bot/middlewares/: __init__.py  locale.py  nc.py
bot/utils/: __init__.py  i18n_format.py
