[project]
name = "nc-tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogram-dialog>=2.3.1",
    "aiogram-i18n>=1.4",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "fluent-compiler>=1.1",
    "nc-py-api>=0.20.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "basedpyright>=1.29.4",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
